<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    tools:context=".implementations.banner.YBannerView">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/bannerScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:contentDescription="@string/bannerScreen" />

    <ImageView
        android:id="@+id/bannerIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:contentDescription="@string/bannerIcon" />

    <ImageView
        android:id="@+id/bannerInstall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:contentDescription="@string/bannerInstall" />

    <ImageView
        android:id="@+id/bannerStar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:contentDescription="@string/bannerStar1" />

    <ImageView
        android:id="@+id/bannerStar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:contentDescription="@string/bannerStar2"/>

    <ImageView
        android:id="@+id/bannerStar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:contentDescription="@string/bannerStar3"/>

    <ImageView
        android:id="@+id/bannerStar4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:contentDescription="@string/bannerStar4"/>

    <ImageView
        android:id="@+id/bannerStar5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:contentDescription="@string/bannerStar5"/>

    <TextView
        android:id="@+id/bannerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:text="@string/bannerTitle" />

    <ImageView
        android:id="@+id/bannerImageOnly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:contentDescription="@string/bannerImageOnly"/>

    <TextView
        android:id="@+id/bannerAds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:text="@string/bannerAds"
        android:textColor="@android:color/black" />


</FrameLayout>